adding ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,1 @@
-# Ignore virtual environment
-env/
-
-# Ignore Python cache files
-__pycache__/
-*.pyc
-*.pkl
-*.pyo
-data/output/  
-# Ignore database files
-*.db
-data/
-
-# Ignore model files
-models/*.pkl
-
-# Ignore IDE & OS-specific files
-.vscode/
-.DS_Store
+.venv
